# StoppedwummDownloader

./: LICENSE  README.md  app.py  mac.icns  pyproject.toml  requirements.txt
.github/workflows/: build.yml  codacy.yml  test.yml
things/notes-on-life/: README.md
