[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "my_project"
version = "0.1.0"
description = "A sample Python project"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
yt_dlp = "^2023.01.01"
pillow = "^9.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
