[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Stoppedwumm-Installer"
version = "1.0.0"
description = "A youtube dlp frontend"
authors = ["Stoppedwumm"]

[tool.poetry.dependencies]
python = "^3.8"
yt_dlp = "^2023.01.01"
pillow = "^9.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
